applied codox patch